--- a/app/views/collages/show.html.erb
+++ b/app/views/collages/show.html.erb
@@ -39,6 +39,11 @@
   </div>
   <fieldset id="controlls" disabled="true">
   <div class="col-md-12 clearfix">
+    <label><span style="color:#fff">Angle:</span></label>
+    <input id="angle-control" value="0" min="-180" max="180" type="range">
+  </div>
+  
+  <div class="col-md-12 clearfix">
     <label><span style="color:#fff">Scale:</span></label>
     <input id="scale-control" value="1" min="0.1" max="3" step="0.1" type="range">
   </div>
