--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,2 +1,2 @@
 <%# add navigation links to this file %>
-<li><%= link_to 'Collages', collages_path %></li>
+<li><%= link_to 'Collages gallery', collages_path %></li>
